Use Unsafe for all final static field types