@@ -3,6 +3,7 @@ package com.meterware.simplestub;
 import sun.misc.Unsafe;
 
 import java.lang.reflect.Field;
+import java.lang.reflect.Modifier;
 import java.security.AccessController;
 import java.security.PrivilegedAction;
 
@@ -66,10 +67,6 @@ abstract public class StaticStubSupport {
 
     private static class StaticMemento implements Memento {
 
-        private static final String JIGSAW_INACCESSIBLE_OBJECT_EXCEPTION_NAME = "java.lang.reflect.InaccessibleObjectException";
-        private static final String JIGSAW_INACCESSIBLE_OBJECT_MESSAGE = "Unable to modify final field %s in class %s.%n" +
-                "The module system forbids removing the final qualifier unless the JVM is started with --add-exports-private=java.base/java.lang.reflect=ALL-UNNAMED";
-
         private Class<?> containingClass;
         private String fieldName;
         private Object originalValue;
@@ -130,10 +127,28 @@ abstract public class StaticStubSupport {
 
         private void setAccessibleField(Class aClass, String fieldName, Object value) throws NoSuchFieldException, IllegalAccessException {
             Field field = getAccessibleField(aClass, fieldName);
-            if (!aClass.isPrimitive())
-                unsafe.putObject(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field), value);
-            else
+            if (!isFinal(field))
                 setFieldValue(value, field);
+            else if (!field.getType().isPrimitive())
+                unsafe.putObject(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field), value);
+            else if (field.getType().equals(boolean.class) && value instanceof Boolean)
+                unsafe.putBoolean(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field), (Boolean) value);
+            else if (field.getType().equals(char.class) && value instanceof Character)
+                unsafe.putChar(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field), ((Character) value));
+            else if (field.getType().equals(byte.class) && value instanceof Number)
+                unsafe.putByte(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field), ((Number) value).byteValue());
+            else if (field.getType().equals(short.class) && value instanceof Number)
+                unsafe.putShort(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field), ((Number) value).shortValue());
+            else if (field.getType().equals(int.class) && value instanceof Number)
+                unsafe.putInt(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field), ((Number) value).intValue());
+            else if (field.getType().equals(long.class) && value instanceof Number)
+                unsafe.putLong(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field), ((Number) value).longValue());
+            else if (field.getType().equals(float.class) && value instanceof Number)
+                unsafe.putFloat(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field), ((Number) value).floatValue());
+            else if (field.getType().equals(double.class) && value instanceof Number)
+                unsafe.putDouble(unsafe.staticFieldBase(field), unsafe.staticFieldOffset(field), ((Number) value).doubleValue());
+            else
+                throw new IllegalArgumentException(String.format("Unable to field '%s' of type %s to value \"%s\" of type %s", fieldName, field.getType(), value, value.getClass().getName()));
         }
 
 
@@ -150,6 +165,10 @@ abstract public class StaticStubSupport {
             Field field = aClass.getDeclaredField(fieldName);
             field.setAccessible(true);
             return field;
+        }
+
+        private boolean isFinal(Field field) {
+            return (field.getModifiers() & Modifier.FINAL) == Modifier.FINAL;
         }
 
         private Object getPrivateStaticField(Class aClass, String fieldName) throws NoSuchFieldException, IllegalAccessException {
